--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,13 +1,14 @@
 body{
-  font-family:Arial, Helvetica, sans-serif
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .para,
 .small-para {
   color: hsl(0, 0%, 0%);
+  font-weight: bold;
 }
 
-.small-para {
+.para.small-para {
   font-size: 14px;
 }
 
@@ -15,8 +16,8 @@ body{
   font-size: 22px;
 }
 
-.confirm {
-  background: green;
+.button.confirm {
+  background-color: green;
   color: white;
   font-weight: bold;
 } 
@@ -27,9 +28,10 @@ body{
   font-size: 20px;
 }
 
-.child {
+.text.child {
   color: rgb(0, 0, 0);
   font-size: 14px;
+  font-weight: bold;
 }
 
 div.text {
